--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@ main {
   padding: 2rem;
   min-height: 94vh;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
-    url("../images/code-screen.jpeg") fixed center no-repeat;
+    url("../data/images/code-screen.jpeg") fixed center no-repeat;
   background-size: cover;
   max-width: 100%;
   overflow: hidden;
@@ -160,6 +160,9 @@ main {
       display: block;
       max-width: 90%;
       margin: 0 auto;
+    }
+
+    .project-desc {
     }
   }
 }
