--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,7 +119,7 @@ main {
 
   .content-box {
     width: 50%;
-    padding: 1rem;
+    padding: 2rem;
     border: 1px solid $nav-button-bg;
     text-align: left;
     margin-bottom: 2rem;
@@ -142,8 +142,9 @@ main {
     }
 
     p {
-      font-size: 1.7rem;
-      padding: 2rem;
+      font-size: 1.6rem;
+      padding: 2rem 0;
+      line-height: 1.5;
     }
 
     ul {
@@ -162,7 +163,9 @@ main {
       margin: 0 auto;
     }
 
-    .project-desc {
+    .project-image {
+      border: 1px solid black;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
     }
   }
 }
