--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -105,9 +105,9 @@ main {
     text-align: center;
   }
 
-  .container {
+  .projects-container {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     width: 85%;
     margin: 4rem auto;
@@ -118,8 +118,8 @@ main {
   }
 
   .content-box {
-    width: 50%;
-    padding: 2rem;
+    flex-basis: 32%;
+    padding: 2rem 2.5rem;
     border: 1px solid $nav-button-bg;
     text-align: left;
     margin-bottom: 2rem;
@@ -133,7 +133,6 @@ main {
     }
 
     &:not(:last-child) {
-      margin-right: 1rem;
     }
 
     h2 {
