changed 'a' tags inside .right-nav to be inline-flex containers and align items to center on cross axis

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -129,6 +129,8 @@
 
 .right-nav {
   a {
+    display: inline-flex;
+    align-items: center;
     background-color: $nav-button-bg;
     border-radius: 4px;
     color: #fff;
